--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -25,7 +25,7 @@
         <file>NotificationsManager.js</file>
         <file>Simulation.qml</file>
         <file>TachometerStyle.qml</file>
-        <file>SimpleStatus.qml</file>
+        <file>AlertSimpleDisplay.qml</file>
         <file>ButtonAlertPrecived.qml</file>
         <file>AlertSoundEffect.qml</file>
     </qresource>
