--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -25,7 +25,7 @@
         <file>Simulation.qml</file>
         <file>TachometerStyle.qml</file>
         <file>AlertSimpleDisplay.qml</file>
-        <file>ButtonAlertPrecived.qml</file>
+        <file>ButtonAlertPerceived.qml</file>
         <file>AlertSoundEffect.qml</file>
         <file>PhidgetFeedback.qml</file>
     </qresource>
