Move notification bar to seperate file Replace default status indicator with custom status indicator Add function for changing notification bar alert and state Tweaked UI layout

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -28,5 +28,6 @@
         <file>ButtonAlertPerceived.qml</file>
         <file>AlertSoundEffect.qml</file>
         <file>PhidgetFeedback.qml</file>
+        <file>NotificationsBar.qml</file>
     </qresource>
 </RCC>
