update notifications manager exctract custom ListModel to NotificationList qml update class for notifications

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -28,5 +28,6 @@
         <file>AlertSoundEffect.qml</file>
         <file>PhidgetFeedback.qml</file>
         <file>NotificationsBar.qml</file>
+        <file>NotificationsList.qml</file>
     </qresource>
 </RCC>
