Extract status manager to qml file update new status processing added states for experiment

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -28,6 +28,7 @@
         <file>AlertSoundEffect.qml</file>
         <file>PhidgetFeedback.qml</file>
         <file>NotificationsBar.qml</file>
+        <file>StatusManager.qml</file>
         <file>NotificationsList.qml</file>
     </qresource>
 </RCC>
