Move graphical elemnt into seperate qml Move alert strings to sim

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -30,5 +30,6 @@
         <file>NotificationsBar.qml</file>
         <file>StatusManager.qml</file>
         <file>NotificationsList.qml</file>
+        <file>GraphicalDisplay.qml</file>
     </qresource>
 </RCC>
